build_out.txt

> Configure project :fabric
Fabric Loom: 1.5.8

> Task :common:compileJava UP-TO-DATE
> Task :common:processResources UP-TO-DATE
> Task :common:classes UP-TO-DATE
> Task :common:jar

> Task :fabric:compileJava FAILED
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/init/FabricModBlockEntities.java:17: error: cannot access BlockEntity
    public static BlockEntityType<TownInterfaceEntity> TOWN_INTERFACE_ENTITY_TYPE;
                                 ^
  class file for net.minecraft.world.level.block.entity.BlockEntity not found
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/init/FabricModBlockEntities.java:86: error: cannot access BlockPos
                        TownInterfaceEntity::new,
                        ^
  class file for net.minecraft.core.BlockPos not found
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/init/FabricModBlockEntities.java:98: error: cannot access BlockPos
                        TownInterfaceEntity::new
                        ^
  class file for net.minecraft.core.BlockPos not found
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/init/FabricModMenuTypes.java:48: error: cannot access AbstractContainerMenu
            ExtendedScreenHandlerType<TownInterfaceMenu> townInterfaceMenuType = (ExtendedScreenHandlerType<TownInterfaceMenu>) (Object) ScreenHandlerRegistry
                                     ^
  class file for net.minecraft.world.inventory.AbstractContainerMenu not found
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/init/FabricModMenuTypes.java:48: error: type argument TownInterfaceMenu is not within bounds of type-variable T
            ExtendedScreenHandlerType<TownInterfaceMenu> townInterfaceMenuType = (ExtendedScreenHandlerType<TownInterfaceMenu>) (Object) ScreenHandlerRegistry
                                                                                                            ^
  where T is a type-variable:
    T extends ScreenHandler declared in class ExtendedScreenHandlerType
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/init/FabricModMenuTypes.java:52: error: cannot access BlockPos
                                    net.minecraft.network.FriendlyByteBuf buf) -> new TownInterfaceMenu(syncId,
                                                                                  ^
  class file for net.minecraft.core.BlockPos not found
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/init/FabricModMenuTypes.java:51: error: package net.minecraft.world.entity.player does not exist
                            (int syncId, net.minecraft.world.entity.player.Inventory inventory,
                                                                          ^
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/init/FabricModMenuTypes.java:52: error: cannot find symbol
                                    net.minecraft.network.FriendlyByteBuf buf) -> new TownInterfaceMenu(syncId,
                                                         ^
  symbol:   class FriendlyByteBuf
  location: package net.minecraft.network
/home/az/project/BusinessCraft/fabric/src/main/java/com/quackers29/businesscraft/fabric/init/FabricModBlocks.java:203: error: incompatible types: net.minecraft.util.math.BlockPos cannot be converted to net.minecraft.core.BlockPos
                        return new TownInterfaceEntity(pos, state);
                                                       ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
9 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':fabric:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 1s
4 actionable tasks: 2 executed, 2 up-to-date
